--- a/templates/base.index.html
+++ b/templates/base.index.html
@@ -3,15 +3,20 @@
 <head>
     <title>{% block title %}Default Title{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js" integrity="sha256-9zljDKpE/mQxmaR4V2cGVaQ7arF3CcXxarvgr7Sj8Uc=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="../assets/css/master.css">
+    <link rel="stylesheet" href="../assets/css/frontierToonsFramework.css">
+    <link rel="stylesheet" href="../assets/css/headerFooter.css">
+    <link rel="stylesheet" href="../assets/css/popup.css">
+    <script src="/assets/js/functions/popups.js"></script>
     <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>
     <script src="/assets/js/functions/master.js"></script>    
     <script src="/assets/js/functions/UserFunctions.js"></script>        
     <script src="/assets/js/functions/popovers.js"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>    
+    
         <!-- MailerLite Universal -->
 <script>
     (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
