--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
     <div id="headerWrap">
 
         <div id="siteLogo">
-            <a href="/">FrontierToons</a>
+            <a href="/"><img src="../assets/images/frontier-toons-logo.png" alt="Frontier Toons Logo"></a>
         </div>
          <div class="searchWrapper">
             <button class="search" type="submit"><i class="fa-slab fa-regular fa-magnifying-glass"></i></button>
