--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.index.html' %}
+
 {% block title %}Your Profile Home{% endblock %}
 {% block content %}
 {% macro findProfileURL(socials, platform) %}
@@ -10,7 +11,7 @@
 {% endmacro %}
 
 {% import _self as macros %}
-
+<link rel="stylesheet" href="../assets/css/dashboard.css">
 <div id="dashboard">
     <div id="dashboardSidebar">
         <div class="dashboardSidebarBtn active" data-target="edit"><i class="fa-light fa-pencil"></i> Edit Profile</div>
@@ -171,7 +172,7 @@
                 </div>
                 <div class="deleteAccount">
                     If you want to stop adventuring all together, make sure you have all your affairs in order before you stop.
-                    <button type="submit" class="danger" onclick="deleteAccount()"><i class="fa-slab fa-regular fa-skull-crossbones"></i> Delete Your Account</button>                    
+                    <button type="button" class="danger" onclick="deleteAccount()"><i class="fa-slab fa-regular fa-skull-crossbones"></i> Delete Your Account</button>                    
                 </div>
             </div> 
         </div>
